# corepycler

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/corepycler/: __init__.py  cli.py
tests/: test_cli.py
